--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Web</title>
 </head>
 <body>
+
+    <h1>Hola Mundo</h1>
+    <p>Este es mi primer sitio Web</p>
     
 </body>
 </html>
